docs/api/qiskit/0.33/qiskit.circuit.library.PiecewiseChebyshev.mdx
---
title: PiecewiseChebyshev
description: API reference for qiskit.circuit.library.PiecewiseChebyshev
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PiecewiseChebyshev
---

# PiecewiseChebyshev

<Class id="qiskit.circuit.library.PiecewiseChebyshev" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/arithmetic/piecewise_chebyshev.py" signature="PiecewiseChebyshev(f_x, degree=None, breakpoints=None, num_state_qubits=None, name='pw_cheb')">
  Bases: `qiskit.circuit.library.blueprintcircuit.BlueprintCircuit`

  Piecewise Chebyshev approximation to an input function.

  For a given function $f(x)$ and degree $d$, this class implements a piecewise polynomial Chebyshev approximation on $n$ qubits to $f(x)$ on the given intervals. All the polynomials in the approximation are of degree $d$.

  The values of the parameters are calculated according to \[1].

  **Examples**

  ```python
  import numpy as np
  from qiskit import QuantumCircuit
  from qiskit.circuit.library.arithmetic.piecewise_chebyshev import PiecewiseChebyshev
  f_x, degree, breakpoints, num_state_qubits = lambda x: np.arcsin(1 / x), 2, [2, 4], 2
  pw_approximation = PiecewiseChebyshev(f_x, degree, breakpoints, num_state_qubits)
  pw_approximation._build()
  qc = QuantumCircuit(pw_approximation.num_qubits)
  qc.h(list(range(num_state_qubits)))
  qc.append(pw_approximation.to_instruction(), qc.qubits)
  qc.draw(output='mpl')
  ```

  ![../\_images/qiskit.circuit.library.PiecewiseChebyshev\_0\_0.png](/images/api/qiskit/0.33/qiskit.circuit.library.PiecewiseChebyshev_0_0.png)

  **References**

  **\[1]: Haener, T., Roetteler, M., & Svore, K. M. (2018).**

  Optimizing Quantum Circuits for Arithmetic. [arXiv:1805.12445](http://arxiv.org/abs/1805.12445)

  **Parameters**

  *   **f\_x** (`Union`\[`float`, `Callable`\[\[`int`], `float`]]) – the function to be approximated. Constant functions should be specified as f\_x = constant.
  *   **degree** (`Optional`\[`int`]) – the degree of the polynomials. Defaults to `1`.
  *   **breakpoints** (`Optional`\[`List`\[`int`]]) – the breakpoints to define the piecewise-linear function. Defaults to the full interval.
  *   **num\_state\_qubits** (`Optional`\[`int`]) – number of qubits representing the state.
  *   **name** (`str`) – The name of the circuit object.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[`AncillaQubit`]
  </Attribute>

  ### breakpoints

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.breakpoints" name="breakpoints">
    The breakpoints for the piecewise approximation.

    **Return type**

    `List`\[`int`]

    **Returns**

    The breakpoints for the piecewise approximation.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.data" name="data" />

  ### degree

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.degree" name="degree">
    The degree of the polynomials.

    **Return type**

    `int`

    **Returns**

    The degree of the polynomials.
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### f\_x

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.f_x" name="f_x">
    The function to be approximated.

    **Return type**

    `Union`\[`float`, `Callable`\[\[`int`], `float`]]

    **Returns**

    The function to be approximated.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[`ParameterExpression`, `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.instances" name="instances" attributeValue="= 9" />

  ### metadata

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.num_parameters" name="num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.num_state_qubits" name="num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.parameters" name="parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### polynomials

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.polynomials" name="polynomials">
    The polynomials for the piecewise approximation.

    **Return type**

    `List`\[`List`\[`float`]]

    **Returns**

    The polynomials for the piecewise approximation.

    **Raises**

    **TypeError** – If the input function is not in the correct format.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.qregs" name="qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.PiecewiseChebyshev.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[`Qubit`]
  </Attribute>
</Class>

